<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Color Identifier</string>
    
    <!-- Navigation -->
    <string name="nav_color_picker">Color Picker</string>
    <string name="nav_saved_colors">Saved Colors</string>
    <string name="nav_palettes">Palettes</string>
    <string name="nav_color_wheel">Color Wheel</string>
    
    <!-- Color Picker -->
    <string name="choose_image">Choose Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="tap_to_identify">Tap on image to identify color</string>
    <string name="color_identified">Color Identified</string>
    <string name="save_color">Save Color</string>
    <string name="color_saved">Color saved successfully</string>
    <string name="color_already_exists">Color already exists</string>
    
    <!-- Saved Colors -->
    <string name="no_colors_saved">No colors saved yet</string>
    <string name="select_colors_for_palette">Select colors for palette (max 5)</string>
    <string name="create_palette">Create Palette</string>
    <string name="clear_all_colors">Clear All Colors</string>
    <string name="delete_color">Delete Color</string>
    <string name="copy_hex">Copy HEX</string>
    <string name="copy_rgb">Copy RGB</string>
    <string name="share_color">Share Color</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="colors_cleared">All colors cleared</string>
    <string name="color_deleted">Color deleted</string>
    <string name="cancel_selection">Cancel Selection</string>
    <string name="selected_count">Selected: %d/5</string>
    
    <!-- Palettes -->
    <string name="no_palettes">No palettes created yet</string>
    <string name="delete_palette">Delete Palette</string>
    <string name="rename_palette">Rename Palette</string>
    <string name="share_palette">Share Palette</string>
    <string name="share_as_image">Share as Image</string>
    <string name="share_as_text">Share as Text</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="palette_name">Palette Name</string>
    <string name="enter_palette_name">Enter palette name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="palette_created">Palette created</string>
    <string name="palette_deleted">Palette deleted</string>
    <string name="palette_renamed">Palette renamed</string>
    <string name="clear_all_palettes">Clear All Palettes</string>
    <string name="palettes_cleared">All palettes cleared</string>
    
    <!-- Color Wheel -->
    <string name="brightness">Brightness</string>
    <string name="select_color_slot">Select a slot and pick a color</string>
    <string name="save_palette">Save Palette</string>
    <string name="empty_slot">Empty</string>
    <string name="slot_label">Slot %d</string>
    
    <!-- Permissions -->
    <string name="camera_permission_required">Camera permission is required to take photos</string>
    <string name="storage_permission_required">Storage permission is required to select images</string>
    <string name="permission_denied">Permission denied</string>
    
    <!-- Errors -->
    <string name="error_loading_image">Error loading image</string>
    <string name="error_saving_color">Error saving color</string>
    <string name="error_creating_palette">Error creating palette</string>
    <string name="select_at_least_one_color">Select at least one color</string>
    <string name="select_max_five_colors">Maximum 5 colors allowed</string>
    <string name="invalid_palette_name">Invalid palette name</string>
    
    <!-- Dialogs -->
    <string name="confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_color">Delete this color?</string>
    <string name="confirm_delete_palette">Delete this palette?</string>
    <string name="confirm_clear_all">Clear all items?</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <!-- General -->
    <string name="ok">OK</string>
    <string name="close">Close</string>
</resources>
