<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                android:visibility="gone"
                tools:src="@android:drawable/ic_menu_gallery"
                tools:visibility="visible" />

            <androidx.cardview.widget.CardView
                android:id="@+id/colorInfoCard"
                style="@style/AppCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <View
                        android:id="@+id/colorPreview"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        tools:background="@color/primary" />

                    <TextView
                        android:id="@+id/colorName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:gravity="center"
                        android:textColor="@color/text_primary"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"
                        tools:text="Czerwony" />

                    <TextView
                        android:id="@+id/colorHex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:gravity="center"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/text_size_large"
                        tools:text="#FF0000" />

                    <TextView
                        android:id="@+id/colorRgb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_tiny"
                        android:gravity="center"
                        android:textColor="@color/text_secondary"
                        android:textSize="@dimen/text_size_large"
                        tools:text="RGB(255, 0, 0)" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/saveColorButton"
                        style="@style/AppButton"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:text="@string/save_color" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/instructionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/tap_to_identify"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_medium"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/chooseImageButton"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/choose_image" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhotoButton"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/take_photo" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
